2019-1/221/users/4108/executions/1829_1642.log
== TEST (2019-06-13 08:12:52) 
-- CODE:
from numpy import*
qt = array(eval(import("Quantidades de alunos por turma: ")))
nt = 0

for i in range(size(qt)):
	if qt[i]%5 == 0:
		nt = nt + 1
print(nt)
-- ERROR:
File "XXXX", line 2
    qt = array(eval(import("Quantidades de alunos por turma: ")))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:13:07) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0

for i in range(size(qt)):
	if qt[i]%5 == 0:
		nt = nt + 1
print(nt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:17:37) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:19:39) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
print(nt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:25:40) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		q = range(nt)
print(nt)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:28:59) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
print(nt)		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:32:04) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
print(v)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:32:40) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
print(nt)
print(v)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:45:53) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
q = zeros(nt,dtype = int)

for j in range(size(q)):
	if v[i] == 0:
	q[j] = i 
	

print(nt)
print(q)
	


-- ERROR:
File "XXXX", line 14
    q[j] = i 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:02) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
q = zeros(nt,dtype = int)

for j in range(size(q)):
	if v[i] == 0:
		q[j] = i 

print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:47:11) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
q = zeros(nt,dtype = int)

for j in range(size(q)):
	if v[i] == 0:
		q[j] = i 

print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:51:54) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
q = zeros(nt,dtype = int)

for j in range(size(q)):
	if v[i] == 0:
		q[j] = i

print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:10:18) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i

print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:11:59) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i + i

print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:14:36) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i 

print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:19:30) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	j = 0
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i 
			j = j + 1
			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:20:17) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)
j = 0
for i in range (size(qt)):
	
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i 
			j = j + 1
			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:21:06) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i 
			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:22:23) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i 
			q[j] = q[j] + 1
			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:23:37) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	
for j in range(size(q)):
	if v[i] == 0:
		q[j] = i 
			
			
print(nt)
print(q)
	


-- ERROR:
File "XXXX", line 15
    for j in range(size(q)):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:25:13) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	
	for j in range(size(q)):
		if v[i] == 0:
			q[j] = i 
			
			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:27:54) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	if v[i] == 0:
		q[j] = i 
			
			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:30:02) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	if v[i] == qt[i]%5
		q[j] = i


			
print(nt)
print(q)
	


-- ERROR:
File "XXXX", line 14
    if v[i] == qt[i]%5
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:30:16) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	if v[i] = qt[i]%5
		q[j] = i


			
print(nt)
print(q)
	


-- ERROR:
File "XXXX", line 14
    if v[i] = qt[i]%5
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:31:23) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	v[i] = qt[i]%5
	if v[i] == 0:
		q[j] = i


			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:34:00) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)

for i in range (size(qt)):
	v[i] = qt[i]%5
	if v[i] == 0:
		q[j] = i


			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:34:27) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)
j = 0
for i in range (size(qt)):
	v[i] = qt[i]%5
	if v[i] == 0:
		q[j] = i


			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:35:08) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)
j = 0
for i in range (size(qt)):
	v[i] = qt[i]%5
	if v[i] == 0:
		q[j] = i
		j = j+ 1


			
print(nt)
print(q)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:35:26) 
-- CODE:
from numpy import*
qt = array(eval(input("Quantidades de alunos por turma: ")))
nt = 0
v = zeros(size(qt),dtype = int)

for i in range(size(qt)):
	v[i] = qt[i]% 5
	if v[i] == 0:
		nt = nt + 1
		
q = zeros(nt,dtype = int)
j = 0
for i in range (size(qt)):
	v[i] = qt[i]%5
	if v[i] == 0:
		q[j] = i
		j = j+ 1


			
print(nt)
print(q)
	


-- EXECUTION TIME:
1.08012
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
